ajustes que nao lembro mais